# gunship-fps

./: .gitignore  .gitmodules  Cargo.toml
meshes/: bullet_small.dae  cube.dae  gun_small.dae  sphere.dae
shaders/: forward_phong.glsl
src/: bullet.rs  fps.rs  gun.rs  hotload.rs  logging.rs  main.rs  physics.rs  player.rs  tween.rs
src/fps/: bullet.rs  gun.rs  mod.rs  physics.rs  player.rs
