[package]

name = "fps"
version = "0.0.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

# [lib]
# name = "hotload"
# crate-type = ["dylib"]

# [features]
# default = ["hotloading"]
# hotloading = []

[dependencies.gunship]
version = "*"
path = "../gunship-rs"

[profile.release]
debug = true
