[package]

name = "fps"
version = "0.0.0"
authors = ["David LeGare <excaliburhissheath@gmail.com>"]

[lib]
name = "fps"
crate-type = ["dylib", "rlib"]

[dependencies.gunship]
version = "*"
path = "../gunship-rs"
features = ["hotloading"]

[dependencies.loader]
version = "*"
path = "../gunship-rs/lib/loader"

[profile.release]
debug = true
